# battery-utility-calculator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  lint.yaml
battery_utility_calculator/: __init__.py  battery_utility_calculator.py  energy_costs_calculator.py  pricing_framework.py  storage.py
energy_costs_calculator/: energy_costs_calculator.py
src/: __init__.py  battery_utility_calculator.py  energy_costs_calculator.py
tests/: test_BUC.py  test_ECC.py  test_buc.py  test_but.py  test_pricing_framework.py
